// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cmds:install - with initialized workspace and module installs a module package 1`] = `
{
  "author": "Dan Lynch <pyramation@gmail.com>",
  "bugs": {
    "url": "https://github.com/undefined/undefined/issues",
  },
  "dependencies": {
    "@pgpm-testing/base32": "1.0.0",
  },
  "description": "undefined",
  "homepage": "https://github.com/undefined/undefined",
  "keywords": [],
  "license": "MIT",
  "main": "index.js",
  "module": "esm/index.js",
  "name": "my-first",
  "publishConfig": {
    "access": "undefined",
    "directory": "dist",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/undefined/undefined",
  },
  "scripts": {
    "build": "makage build",
    "build:dev": "makage build --dev",
    "clean": "makage clean",
    "lint": "eslint . --fix",
    "prepare": "npm run build",
    "test": "jest",
    "test:watch": "jest --watch",
  },
  "types": "index.d.ts",
  "version": "0.0.1",
}
`;

exports[`cmds:install - with initialized workspace and module installs a module package 2`] = `
[
  "../../extensions/pgpm-testing-base32/INSTALLED.txt",
]
`;

exports[`cmds:install - with initialized workspace and module installs a module package 3`] = `
"# my-first extension
comment = 'my-first extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-first'
requires = 'citext,plpgsql,pgcrypto'
relocatable = false
superuser = false
  "
`;

exports[`cmds:install - with initialized workspace and module installs two modules 1`] = `
{
  "author": "Dan Lynch <pyramation@gmail.com>",
  "bugs": {
    "url": "https://github.com/undefined/undefined/issues",
  },
  "dependencies": {
    "@pgpm-testing/base32": "1.0.0",
    "@pgpm-testing/utils": "1.0.0",
  },
  "description": "undefined",
  "homepage": "https://github.com/undefined/undefined",
  "keywords": [],
  "license": "MIT",
  "main": "index.js",
  "module": "esm/index.js",
  "name": "my-first",
  "publishConfig": {
    "access": "undefined",
    "directory": "dist",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/undefined/undefined",
  },
  "scripts": {
    "build": "makage build",
    "build:dev": "makage build --dev",
    "clean": "makage clean",
    "lint": "eslint . --fix",
    "prepare": "npm run build",
    "test": "jest",
    "test:watch": "jest --watch",
  },
  "types": "index.d.ts",
  "version": "0.0.1",
}
`;

exports[`cmds:install - with initialized workspace and module installs two modules 2`] = `
[
  "../../extensions/pgpm-testing-base32/INSTALLED.txt",
  "../../extensions/pgpm-testing-utils/INSTALLED.txt",
]
`;

exports[`cmds:install - with initialized workspace and module installs two modules 3`] = `
"# my-first extension
comment = 'my-first extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-first'
requires = 'citext,plpgsql,pgcrypto'
relocatable = false
superuser = false
  "
`;
